traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur() == true){
  ^Snake:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(getDirection() == Direction.Nord){
  ^Snake:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^